# copilot-api

./: Cargo.toml  Dockerfile  Dockerfile_java  Makefile  README.md  README_ZH.md  go.mod  main.go  pom.xml  worker.js
.github/workflows/: Alpine.yml  Linux-build.yml  Spring.yml  Windows-GCC-build.yml  Windows-MSVC-build.yml  build-and-release.yml  c-cpp.yml  cpp-dynamic.yml  cpp-linux-win-static-build.yml  go.yml  maven.yml  permissions.yml  rust.yml  version.yml
Spring/: pom.xml
Spring/src/main/java/com/example/demo/: CopilotApplication.java
Spring/src/main/resources/: application.properties
Spring/src/main/resources/native-image/: jni-config.json  proxy-config.json  reflect-config.json  resource-config.json
go/: completions.go  embeddings.go  go.mod  headers_info.go  main.go  models.go  token_utils.go
rust/rust-get-token-linux-arm64/: get-token-linux-arm64.txt
rust/rust-get-token-windows-arm64.exe/: get-token-windows-arm64.exe.txt
src/: CompletionHandler.java  EmbeddingHandler.java  GitHubOAuthDeviceFlow.java  HeadersInfo.java  Main.java  ModelService.java  ModelsHandler.java  TokenManager.java  main.rs  utils.java
src/config/: jni-config.json  native-image.properties  reflect-config.json  resource-config.json
src/main/cpp/: completion_handler.cpp  completion_handler.h  embeddings_handler.cpp  global.cpp  global.h  header_manager.cpp  header_manager.h  main.cpp  models_handler.cpp  token_manager.cpp  token_manager.h
src/org/sqlite/nativeimage/: SqliteJdbcFeature.java
src/rust/: Cargo.toml  main.rs
(+10 files in other folders)
