[package]
name = "Get-token"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
dotenv = "0.15.0"
webbrowser = "1.0.3"
clipboard = "0.5"
